add course , coursetype CRUD pages

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
                                 <ul class="dropdown-menu" aria-labelledby="adminDropdown">
                                     <li><a class="dropdown-item" asp-area="" asp-page="/AppSettings/Index"><i class="bi bi-sliders"></i> Application Settings</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-page="/Sessions/Index"><i class="bi bi-calendar-event"></i> Sessions</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/CourseTypes/Index"><i class="bi bi-list-ul"></i> Course Types</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-page="/Courses/Index"><i class="bi bi-book"></i> Courses</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-page="/Admin/Users"><i class="bi bi-people"></i> Users</a></li>
                                 </ul>
                             </li>
