--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="col-lg-6 d-none d-lg-block">
-            <img src="~/images/education.svg" class="img-fluid" alt="Education illustration">
+            <img src="~/images/education.webp" class="img-fluid" alt="Education illustration">
         </div>
     </div>
 </div>
